@@ -1,0 +1,1 @@
+require 'xmpp4r/caps/helper/helper.rb'
